Fix typos and minor issues. Remove unused code.