@@ -14,7 +14,6 @@ import java.beans.PropertyChangeSupport;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import javax.swing.SwingUtilities;
 import org.slf4j.Logger;
@@ -35,8 +34,7 @@ import org.weasis.core.api.service.BundleTools;
 public abstract class AbstractFileModel implements TreeModel, DataExplorerModel {
   private static final Logger LOGGER = LoggerFactory.getLogger(AbstractFileModel.class);
 
-  public static final List<String> functions =
-      Collections.unmodifiableList(Arrays.asList("get", "close")); // NON-NLS
+  public static final List<String> functions = List.of("get", "close"); // NON-NLS
 
   public static final String NAME = "All Files"; // NON-NLS
   public static final TreeModelNode group =
@@ -44,13 +42,13 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
   public static final TreeModelNode series =
       new TreeModelNode(2, 0, TagW.SubseriesInstanceUID, new TagView(TagW.FileName));
 
-  private static final List<TreeModelNode> modelStrucure =
+  private static final List<TreeModelNode> modelStructure =
       Arrays.asList(TreeModelNode.ROOT, group, series);
 
   private final Tree<MediaSeriesGroup> model;
   private PropertyChangeSupport propertyChange = null;
 
-  public AbstractFileModel() {
+  protected AbstractFileModel() {
     model = new Tree<>(MediaSeriesGroupNode.rootNode);
   }
 
@@ -92,14 +90,14 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
   @Override
   public MediaSeriesGroup getParent(MediaSeriesGroup node, TreeModelNode modelNode) {
     if (null != node && modelNode != null) {
-      if (node.getTagID().equals(modelNode.getTagElement())) {
+      if (node.getTagID().equals(modelNode.tagElement())) {
         return node;
       }
       Tree<MediaSeriesGroup> tree = model.getTree(node);
       if (tree != null) {
         Tree<MediaSeriesGroup> parent;
         while ((parent = tree.getParent()) != null) {
-          if (parent.getHead().getTagID().equals(modelNode.getTagElement())) {
+          if (parent.getHead().getTagID().equals(modelNode.tagElement())) {
             return parent.getHead();
           }
           tree = parent;
@@ -123,7 +121,7 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
 
   @Override
   public List<TreeModelNode> getModelStructure() {
-    return modelStrucure;
+    return modelStructure;
   }
 
   @Override
